--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -40,4 +40,30 @@ li {
 
 a {
   text-decoration: none;
+  color: inherit;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
+}
+
+header {
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+footer {
+  flex-grow: 0;
+  flex-shrink: 0;
 }
